# amanita

./: .gitignore  AI-Navigator.md  LICENSE  README.md  amanita  api_keys.json  deploy.json  hardhat.config.js  package-lock.json  package.json  pinata_cache.json  requirements.txt  run_debug_bot.sh  start.bash
bot/: config.py  db.sql  db_dict_data.md  db_dict_data.sql  dependencies.py  language_translator.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_connection.py  test_product_validation.py  test_raw_api.py
bot/api/: README.md  config.py  dependencies.py  error_handlers.py  main.py
bot/catalog/: Iveta_catalog.csv  Iveta_catalog.original.csv  Iveta_catalog_structured.csv  active_catalog.json  catalog2.json  catalog_images.json  images_upload_log.csv  images_upload_log.json  orders_cart.json  organic_cid_mapping.json  organic_descriptions.json  product_registry_upload_data.json  upload_log.csv
bot/docs/: API Requirements.md  Services Architecture.md  Technical Architecture.md  acceptance_criteria_api_keys.yml  api-jira.md  api.md  api_logging_implementation.md  arweave-TDD.md  arweave-testing-report.md  bot-tech.md  catalog_pipeline.md  currentwork.md  dependency-injection-architecture.md  docs-plan.md  onboarding-jira.md  onboarding.md  payments architecture.md  pinata-TDD.md  pinata-bug-report.md  product-catalog-population.md  product-registry-TDD.md  product-structure.md  serialization-system.md  validation-system.md
bot/flowers/: invites.txt
bot/fsm/: onboarding_states.py  product_creation_states.py
bot/handlers/: __init__.py  catalog.py  (+12 more)
(+370 files in other folders)
